# millefeuille

./: .gitignore  README.md  README.qmd  pyproject.toml
.github/workflows/: run_pytest.yaml
millefeuille/module/: bed2gff.py  gff2bed.py  overlaps.py
src/millefeuille/: bed_to_gff.py  gff_to_bed.py
tests/: sample.gff  sample1.bed  sample1.bed12  test_bed2gff.py  test_gff2bed.py  test_overlaps.py
