[project]
name = "millefeuille"
version = "0.1.0"
description = "Manipulate genomic coordinates overlaps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "ncls",
    "pandas>=2.2.3",
    "pyranges>=0.1.4",
    "pytest>=8.3.5",
    "sorted-nearest",
    "upsetplot>=0.9.0",
]

[tool.uv.sources]
sorted-nearest = { git = "https://github.com/pyranges/sorted_nearest.git", rev = "refs/pull/11/merge" }
ncls = { git = "https://github.com/pyranges/ncls.git", rev = "refs/pull/51/merge" }
